...
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            app:srcCompat="@drawable/media_shuffle" />

        <Button
            android:id="@+id/recent_item_more_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/more_text" />

...
